--- a/index.html
+++ b/index.html
@@ -1,52 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Ian Clicker</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="game">
     <div id="top-bar">
-      <div id="click-counter">0 Clicks</div>
-      <div id="controls">
-        <select id="buy-multiplier">
-          <option value="1">x1</option>
-          <option value="5">x5</option>
-          <option value="10">x10</option>
-          <option value="20">x20</option>
-        </select>
-        <button id="menu-button">Menu</button>
-      </div>
+      <button id="multiplier" class="top-button">1x</button>
+      <button id="menu-button" class="top-button">☰</button>
     </div>
 
-    <div id="main">
-      <div id="ian-section">
-        <img src="ian.png" id="ian-img" alt="Ian" />
-        <button id="rebirth-btn" class="disabled">Rebirth</button>
-      </div>
+    <div id="ian-container">
+      <img src="ian.png" id="ian" alt="Ian">
+      <div id="clicks-display">0</div>
+      <button id="rebirth-button" disabled>Rebirth</button>
+    </div>
 
-      <div id="upgrades">
-        <div class="upgrade" id="cursor-upgrade">
-          <div>Ian Cursor<br><span class="price">10 Clicks</span></div>
-          <div class="icons" id="cursor-icons"></div>
-        </div>
-        <div class="upgrade" id="miner-upgrade">
-          <div>Ian Miner<br><span class="price">100 Clicks</span></div>
-          <div class="icons" id="miner-icons"></div>
-        </div>
-        <div class="upgrade" id="robot-upgrade">
-          <div>Ian Robot<br><span class="price">500 Clicks</span></div>
-          <div class="icons" id="robot-icons"></div>
-        </div>
+    <div id="upgrades">
+      <div class="upgrade-row" id="upgrade-row-1"></div>
+      <div class="upgrade-row" id="upgrade-row-2"></div>
+      <div class="upgrade-row" id="upgrade-row-3"></div>
+    </div>
+
+    <div id="world-select" class="popup hidden">
+      <img src="x.png" id="close-worlds" class="close-btn" alt="Close">
+      <div class="world-card" id="world1card">
+        <img src="world1select.png" alt="Cash World">
+        <div class="world-info">Cash World <span id="world1status">(Already Here)</span></div>
+      </div>
+      <div class="world-card" id="world2card">
+        <img src="world2select.png" alt="Mars">
+        <div class="world-info">Mars <span id="world2status">- Requires 10M Clicks</span></div>
       </div>
     </div>
-  </div>
-
-  <div id="world-popup" class="hidden">
-    <img src="x.png" id="close-popup" />
-    <div class="world-option" id="world1">Cash World (Already Here)</div>
-    <div class="world-option" id="world2">Mars<br>Must have 10M Clicks</div>
   </div>
 
   <script src="script.js"></script>
