--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <button id="menu-btn">☰</button>
     </div>
 
-    <div id="ian-container">a
+    <div id="ian-container">
       <div id="click-count">0 Clicks</div>
       <img id="ian-img" src="ian.png" alt="Ian" />
       <button id="rebirth-btn" disabled>Rebirth</button>
