--- a/index.html
+++ b/index.html
@@ -2,59 +2,63 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ian Clicker</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="top-bar">
-    <div id="buy-multiplier">
-      <button onclick="setMultiplier(1)">1x</button>
-      <button onclick="setMultiplier(5)">5x</button>
-      <button onclick="setMultiplier(10)">10x</button>
-      <button onclick="setMultiplier(20)">20x</button>
+  <div id="game">
+    <div id="top-bar">
+      <button id="buyMultiplierBtn">1x</button>
+      <div class="dropdown">
+        <button id="menuBtn">☰</button>
+        <div class="dropdown-content" id="menuDropdown">
+          <a href="#" id="openWorldsBtn">Worlds</a>
+        </div>
+      </div>
     </div>
-    <button id="menu-button" onclick="toggleMenu()">☰</button>
-  </div>
-
-  <div id="menu-popup" class="hidden">
-    <div class="menu-header">
-      <span>Menu</span>
-      <button onclick="toggleMenu()" class="x-button">✕</button>
-    </div>
-    <button onclick="openWorldSelector()">Worlds</button>
-  </div>
-
-  <div id="world-selector" class="hidden">
-    <div class="world-card" onclick="trySwitchWorld(1)">
-      <img src="world1select.png" />
-      <p>Cash World<span id="world1-status"></span></p>
-    </div>
-    <div class="world-card" onclick="trySwitchWorld(2)">
-      <img src="world2select.png" />
-      <p>Mars<span id="world2-status"></span></p>
-    </div>
-    <button class="x-button" onclick="closeWorldSelector()">✕</button>
-  </div>
-
-  <div id="game-container">
-    <div id="left-upgrades">
-      <div class="upgrade-row" id="upgrade1-row"></div>
-      <div class="upgrade-row" id="upgrade2-row"></div>
-      <div class="upgrade-row" id="upgrade3-row"></div>
-    </div>
-
-    <div id="center-clicker">
-      <div id="click-count">0 Clicks</div>
-      <img src="ian.png" id="ian" onclick="handleClick()" />
-      <button id="rebirth-button" onclick="doRebirth()">Rebirth</button>
+    <div id="main">
+      <div id="clicker">
+        <div id="click-count">0 Clicks</div>
+        <img id="ian" src="ian.png" alt="Ian" />
+        <button id="rebirthBtn" class="greyed">Rebirth</button>
+      </div>
+      <div id="upgrades">
+        <div class="upgrade-row" id="upgradeRow1"></div>
+        <div class="upgrade-row" id="upgradeRow2"></div>
+        <div class="upgrade-row" id="upgradeRow3"></div>
+      </div>
     </div>
   </div>
 
-  <div id="upgrades-list">
-    <div id="upgrade-buttons"></div>
+  <div id="worldsPopup" class="popup hidden">
+    <div class="popup-content">
+      <button id="closeWorlds" class="close-btn">
+        <img src="x.png" alt="Close" />
+      </button>
+      <div class="world-select" id="world1select">
+        <img src="world1select.png" alt="Cash World" />
+        <p>
+          Cash World <span id="world1Status">(Already Here)</span>
+        </p>
+      </div>
+      <div class="world-select" id="world2select">
+        <img src="world2select.png" alt="Mars" />
+        <p>
+          Mars <span id="world2Status">- Requires 10M Clicks</span>
+        </p>
+      </div>
+    </div>
   </div>
 
-  <script src="game.js"></script>
+  <div id="offlinePopup" class="popup hidden">
+    <div class="popup-content">
+      <p>
+        You earned <span id="offlineEarnings">0</span> clicks while offline!
+      </p>
+      <button onclick="closeOfflinePopup()">OK</button>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
